# minimap2-rs

./: .gitignore  .gitmodules  Cargo.toml
minimap2/: Cargo.toml
minimap2-sys/: Cargo.toml  README.md  build.rs
minimap2-sys/src/: lib.rs
minimap2/src/: lib.rs  transcript.rs
