[package]
name = "minimap2-sys"
version = "0.1.0"
edition = "2021"
authors = ["Heng Li <hli@ds.dfci.harvard.edu>"]
description = "Raw FFI bindings to minimap2."
license = "MIT"

[dependencies]
libc = "0.2"
libz-sys = { version = "1.1", features = ["static"] }

[build-dependencies]
cc = { version = "1.1", features = ["parallel"] }
bindgen = "0.69"
glob = "0.3"
