[package]
name = "minimap2"
version = "0.1.0"
edition = "2021"
authors = ["Rui Xu <xurui1412@gmail.com>"]
description = "High-level Rust wrapper for minimap2."
license = "MIT"

[dependencies]
minimap2-sys = { workspace = true }
libc = "0.2"
noodles-fastq = "0.21"
noodles-sam = "0.62"
noodles-core = "0.15"
anyhow = "1.0"
